--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1>Conociendo Index de Angular</h1>
   <app-root></app-root>
+  <h3>Estamos en el footer</h3>
 </body>
 </html>
